Closed
Bug 560271
Opened 11 years ago
Closed 11 years ago
nsTextControlFrame.cpp warning for "'mTextListener' will be initialized after...'mInEditorInitialization'
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dholbert, Assigned: dholbert)
References
Details
(Whiteboard: [build_warning])
Attachments
(1 file)
726 bytes,
patch
|
ehsan
:
review+
|
Details | Diff | Splinter Review |
> layout/forms/nsTextControlFrame.h: In constructor ‘nsTextControlFrame::nsTextControlFrame(nsIPresShell*, nsStyleContext*)’:
> layout/forms/nsTextControlFrame.h:376: error: ‘nsTextControlFrame::mTextListener’ will be initialized after
> layout/forms/nsTextControlFrame.h:370: error: ‘PRPackedBool nsTextControlFrame::mInEditorInitialization’
> layout/forms/nsTextControlFrame.cpp:967: error: when initialized here
Trivial fix -- just reorder init list in constructor.
Attachment #439974 -
Flags: review?(ehsan)
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Updated•11 years ago
|
Attachment #439974 -
Flags: review?(ehsan) → review+
Assignee | ||
Comment 1•11 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/e137e3333828
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•11 years ago
|
Whiteboard: [build_warning]
You need to log in
before you can comment on or make changes to this bug.
Description
•