Bug 560271: Reorder nsTextControlFrame constructor init list to fix build warning. r=ehsan